fix: tag item contrast
closes https://github.com/NodeBB/NodeBB/issues/11035

--- a/less/tags.less
+++ b/less/tags.less
@@ -30,7 +30,8 @@
 	.tag {
 		text-transform: uppercase;
 		font-size: 10px;
-		background: lighten(@gray-lighter, 2.5%);
+		background: #e9ecef;
+    	color: #7a8288;
 		padding: 5px;
 		white-space: nowrap;
 	}
